Fri Dec 13 19:50:56 1991  Linus Tolke Y  (linus at ruben)

	* lyskom-rest.el, review.el, swedish-strings.el, vars.el
	  (lyskom-is-read, lyskom-normally-read-texts,
	  kom-review-last-normally-read): Nu finns det m|jlighet att
	  }terse senaste normalt l{sta igen.

Fri Dec 13 19:17:48 1991  Inge Wallin  (inge at lysator)

	* commands2.el, swedish-strings.el: Nytt kommando "[ndra
	  superm|te"   Nya funktioner: kom-set-super-conf,
	  lyskom-set-super-conf, lyskom-set-super-conf-2,
	  lyskom-set-super-conf-3 

Wed Nov 27 23:21:43 1991  Per Cederqvist  (ceder at robin)

	* swedish-strings.el (y-or-n-instring, y-instring): SPC och DEL
	  borttagna.

	* completing-read.el (lyskom-hack-minibuf): Raden 
	  "(setq foo minibuffer-scroll-window)" (som antagligen bara var
	  en bortgl|md debugrad) borttagen.

Sun Nov 24 03:41:56 1991  Per Cederqvist  (ceder at robert)

	* commands1.el (lyskom-write-comment-soon): Skrev lite kommentarer.

	* swedish-strings.el, english-strings.el: (comment-keep-recpt-p)
	  Ny text }t featuren nedan.

	* vars.el (kom-confirm-multiple-recipients): Ny variabel som g|r
	  att man kan st{nga av fr}gan nedan.

	* commands1.el (lyskom-comment-recipients): Om
	  kom-confirm-multiple-recipients {r non-nil s} m}ste anv{ndaren
	  trycka "j" f|r att bekr{fta att de ska st} kvar som mottagare i
	  kommentaren man skriver. Fr}gan st{lls n{r man trycker "k".

Tue Nov 12 23:40:16 1991  Linus Tolke Y  (linus at lysator)

	* vars.el, async.el, cache.el (lyskom-who-info-buffer-is-on): Ny
	  variabel som g|r att man kan st{nga av who-bufferten.

Fri Nov  8 13:51:32 1991  Linus Tolke Y  (linus at robert)

	* lyskom-rest.el, edit-text.el, commands2.el, vars.el:
	  lyskom-swascii-commands, lyskom-swascii-header-subject,
	  lyskom-swascii-header-separator, New variables, added to make it
	  possible to switch the value of kom-emacs-knows-iso-8859-1 after
	  loading.

Sat Nov  2 19:03:57 1991  Linus Tolke Y  (linus at robin)
